Test solutions wrapped in details tags

--- a/code/Untitled.ipynb
+++ b/code/Untitled.ipynb
@@ -77,6 +77,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "   <strong>Hi!</strong> This is a blue note.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
