Clarify label selection

--- a/code/2-data-analysis-in-python.ipynb
+++ b/code/2-data-analysis-in-python.ipynb
@@ -2614,12 +2614,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is important to realize that `loc[]` selects rows and columns by their *labels*. To instead select by row or column *position*, use `iloc[]` (integer location)."
+    "It is important to realize that `loc[]` selects rows and columns by their *labels*, and that slicing therefore in inclusive of *both* the start and the end. To instead select by row or column *position*, use `iloc[]` (integer location)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2678,7 +2678,7 @@
        "4        349     11   12"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2693,7 +2693,7 @@
    "source": [
     "The index of `surveys` consists of consecutive integers so in this case selecting from the index by labels or position will look the same. As will be shown later, an index could also consist of text names just like the columns.\n",
     "\n",
-    "While selecting a slice by label is inclusive of the start and end, selecting a slice by position is inclusive of the start by exclusive of the end position, just like when slicing in lists."
+    "While selecting a slice by label is inclusive of the start and end, selecting a slice by position is inclusive of the start by exclusive of the end position, consistent with how position slicing works for other Python objects, such as lists and tuples."
    ]
   },
   {
@@ -3907,7 +3907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4148,7 +4148,7 @@
        "9     NaN  Neotoma  albigula  Rodent   Control        NaN  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4167,7 +4167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4378,6 +4378,40 @@
        "      <td>Control</td>\n",
        "      <td>0.087</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>3002</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>F</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>174.0</td>\n",
+       "      <td>Neotoma</td>\n",
+       "      <td>albigula</td>\n",
+       "      <td>Rodent</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>0.174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>4667</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>Neotoma</td>\n",
+       "      <td>albigula</td>\n",
+       "      <td>Rodent</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>0.130</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -4394,6 +4428,8 @@
        "21       2184     11   17  1979        2         NL   F             30.0   \n",
        "22       2406      1   16  1980        2         NL   F             33.0   \n",
        "24       3000      5   18  1980        2         NL   F             31.0   \n",
+       "25       3002      5   18  1980        2         NL   F             33.0   \n",
+       "26       4667      7    8  1981        2         NL   F             30.0   \n",
        "\n",
        "    weight    genus   species    taxa plot_type  weight_kg  \n",
        "11   204.0  Neotoma  albigula  Rodent   Control      0.204  \n",
@@ -4405,10 +4441,12 @@
        "20   274.0  Neotoma  albigula  Rodent   Control      0.274  \n",
        "21   186.0  Neotoma  albigula  Rodent   Control      0.186  \n",
        "22   184.0  Neotoma  albigula  Rodent   Control      0.184  \n",
-       "24    87.0  Neotoma  albigula  Rodent   Control      0.087  "
+       "24    87.0  Neotoma  albigula  Rodent   Control      0.087  \n",
+       "25   174.0  Neotoma  albigula  Rodent   Control      0.174  \n",
+       "26   130.0  Neotoma  albigula  Rodent   Control      0.130  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
