Fix hindfoot half challenge

--- a/code/2-data-analysis-in-python.ipynb
+++ b/code/2-data-analysis-in-python.ipynb
@@ -4550,7 +4550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Whether to use `dropna()` or `fillna()` depends on the data set and the purpose of the analysis."
+    "Whether to use `dropna()` or `fillna()` depends on the data set and the purpose of the analysis. It is also possible to interpolate missing values from neighboring values via the `interpolate()` method, which can be useful when working with timeseries."
    ]
   },
   {
@@ -4564,8 +4564,8 @@
     ">#### Challenge\n",
     ">\n",
     ">1. Create a new data frame from the `surveys` data that contains only the `species_id` and `hindfoot_length` columns and no NA values.\n",
-    ">2. Add a column to this new data frame called `hindfoot_half`, which contains values that are half the `hindfoot_length` values. Filter out all observations that have a value less than 30 in the `hindfoot_half`.\n",
-    ">3. The final data frame should have 31,436 rows and 3 columns. Check that your data frame meets these criteria."
+    ">2. Add a column to this new data frame called `hindfoot_half`, which contains values that are half the `hindfoot_length` values. Keep all observations that have a value less than 30 in the `hindfoot_half`.\n",
+    ">3. The final data frame should have 31,436 rows and 3 columns. How can you check that your data frame meets these criteria?"
    ]
   },
   {
@@ -4657,12 +4657,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The output here is a series that is indexed with the grouped variable (the species) and the single column contains the result of the aggregation (the mean weight). Since there are so many species, a subset of the will be selected to fit the output within the screen and facilitate instruction."
+    "The output here is a series that is indexed with the grouped variable (the species) and the single column contains the result of the aggregation (the mean weight). Since there are so many species, a subset of the will be selected to fit the output within the screen and facilitate instruction. This could be done by manually typing each OR (`|`) condition."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
