Move explanation of isin() here from lec 3

--- a/code/2-data-analysis-in-python.ipynb
+++ b/code/2-data-analysis-in-python.ipynb
@@ -4664,10 +4664,79 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8125, 14)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surveys.loc[(surveys['species'] == 'albigula') |\n",
+    "            (surveys['species'] == 'ordii') |\n",
+    "            (surveys['species'] == 'flavus') |\n",
+    "            (surveys['species'] == 'torridus')].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing this number with the number of rows in the original data frame shows that it was filtered successfully."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(34786, 14)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surveys.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, it is rather tedious to type out the species names by hand and to do one comparison per species. Instead, the names of the species of interest can be extract by putting them in a list and use the `isin()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8125, 14)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "species_to_keep = ['albigula', 'ordii', 'flavus', 'torridus']\n",
-    "surveys_sub = surveys.loc[surveys['species'].isin(species_to_keep)]"
+    "surveys_sub = surveys.loc[surveys['species'].isin(species_to_keep)]\n",
+    "surveys_sub.shape"
    ]
   },
   {
