Clarify location based indexing

--- a/code/2-data-analysis-in-python.ipynb
+++ b/code/2-data-analysis-in-python.ipynb
@@ -4799,6 +4799,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Single `[]` without `.loc[]` could also be used to extract rows by label from a series, but since single `[]` extracts columns from a data frame, it can be easier to be explicit and use `.loc[]` instead of keeping track when the returned object is a series or a data frame.\n",
+    "\n",
     "Groups can also be created from multiple columns, e.g. it could be interesting to see the difference in weight between males and females within each species."
    ]
   },
@@ -5251,7 +5253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -5269,7 +5271,7 @@
        "Name: weight, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5288,7 +5290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -5306,7 +5308,7 @@
        "Name: weight, dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5324,7 +5326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -5342,7 +5344,7 @@
        "Name: weight, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5360,7 +5362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -5457,7 +5459,7 @@
        "         M     23.695382   3.990268"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5477,7 +5479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -5595,7 +5597,7 @@
        "         M     26681.0            13.0  29.0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
