Add link to available aggregation functions

--- a/code/2-data-analysis-in-python.ipynb
+++ b/code/2-data-analysis-in-python.ipynb
@@ -5614,30 +5614,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are plenty of aggregation methods available in pandas (e.g. `sem`, `mad`, `sum`, all of which can be found using tab-complete on the grouped data frame."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tab completion might only work like this:\n",
-    "# find_agg_methods = grouped_surveys['weight']\n",
-    "# find_agg_methods.<tab>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "There are plenty of aggregation methods available in pandas (e.g. `sem`, `mad`, `sum`), the most common are listed in [the table at the end of this subsection in the documentation](https://pandas.pydata.org/pandas-docs/stable/groupby.html#aggregation) and all can be found via tab-completions of the data frame (`surveys.<tab>`).\n",
+    "\n",
     "Even if a function is not part of the `pandas` library, it can be passed to `agg()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -5655,7 +5639,7 @@
        "Name: weight, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
