--- a/code/2-data-analysis-in-python.ipynb
+++ b/code/2-data-analysis-in-python.ipynb
@@ -5664,10 +5664,7 @@
     "> #### Challenge\n",
     "> \n",
     "> 1. Use `groupby()` and `agg()` to find the mean, min, and max hindfoot\n",
-    "> length for each species.\n",
-    "> \n",
-    "> 2. What was the heaviest animal measured in each year? Return the columns `year`,\n",
-    "> `genus`, `species`, and `weight`. *Hint* Look into the `idxmax()` method."
+    "> length for each species."
    ]
   },
   {
@@ -5681,7 +5678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -5695,7 +5692,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
