Group by variable where all groups have observations

--- a/code/2-data-analysis-in-python.ipynb
+++ b/code/2-data-analysis-in-python.ipynb
@@ -5711,25 +5711,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "taxa    sex\n",
-       "Rodent  F      15690\n",
-       "        M      17348\n",
+       "taxa     plot_type                \n",
+       "Bird     Control                        110\n",
+       "         Long-term Krat Exclosure        67\n",
+       "         Rodent Exclosure               118\n",
+       "         Short-term Krat Exclosure      131\n",
+       "         Spectab exclosure               24\n",
+       "Rabbit   Control                         29\n",
+       "         Long-term Krat Exclosure        17\n",
+       "         Rodent Exclosure                24\n",
+       "         Short-term Krat Exclosure        2\n",
+       "         Spectab exclosure                3\n",
+       "Reptile  Control                          6\n",
+       "         Long-term Krat Exclosure         3\n",
+       "         Rodent Exclosure                 1\n",
+       "         Short-term Krat Exclosure        4\n",
+       "Rodent   Control                      15466\n",
+       "         Long-term Krat Exclosure      5031\n",
+       "         Rodent Exclosure              4090\n",
+       "         Short-term Krat Exclosure     5769\n",
+       "         Spectab exclosure             3891\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "surveys.groupby(['taxa', 'sex']).size()"
+    "surveys.groupby(['taxa', 'plot_type']).size()"
    ]
   },
   {
@@ -6922,7 +6939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
