Move explanation of isin() to lec2

--- a/code/3-data-wrangling-and-viz.ipynb
+++ b/code/3-data-wrangling-and-viz.ipynb
@@ -391,41 +391,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A subset can now be created from the data frame, including only those rows where the column 'species' matches any of the names in the `most_common_species` variable. `pandas` has a special `isin()` method for comparing a data frame column to an array-like object of names such as the index extracted above."
+    "Using the `isin()` method, a subset can now be created from the data frame, including only those rows where the column 'species' matches any of the names in the `most_common_species` variable. To facilitate plotting, any NA values will be dropped before assigning the resulting data frame to a new variable name."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(19637, 13)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "surveys.loc[surveys['species'].isin(most_common_species)].shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The number of observations is the same as with the manual filtering above, but this method is more succinct.\n",
-    "\n",
-    "To facilitate plotting, any NA values will be dropped before assigning the resulting data frame to a new variable name."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -434,13 +405,13 @@
        "(18289, 13)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "surveys_common = surveys.loc[surveys['species'].isin(most_common_species)].dropna()\n",
+    "surveys_common = surveys.dropna().loc[surveys['species'].isin(most_common_species)])\n",
     "surveys_common.shape"
    ]
   },
