Clear up wording around a few visualization concepts

--- a/code/3-data-wrangling-and-viz.ipynb
+++ b/code/3-data-wrangling-and-viz.ipynb
@@ -496,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get a vertical plot, change `y` to `x`. With long label names, horizontal plots can be easier to read."
+    "To get a vertical plot, many categorical `seaborn` plots allow to change `y` to `x`. With long label names, horizontal plots can be easier to read."
    ]
   },
   {
@@ -843,7 +843,7 @@
    "source": [
     "There are a few candidate variables that have a suitable number of unique values. A very effective approach for exploring multiple categorical variables in a data set is to plot so-called \"small multiples\" of the data, where the same type of plot is used for different subsets of the data. These plots are drawn in rows and columns forming a grid pattern, and can be referred to as a \"lattice\", \"facet\", or \"trellis\" plot.\n",
     "\n",
-    "Visualizing categorical variables in this manner is a key step in exploratory data analysis, and thus `seaborn` has a dedicated plot function for this, called `factorplot()` (categorical variables are sometimes referred to as \"factors\"). This plot can be used to plot the same violin plot as before, and easily spread the variables across the rows and columns, e.g. for the variable `sex`."
+    "Visualizing categorical variables in this manner is a key step in exploratory data analysis, and thus `seaborn` has a dedicated plot function for this, called `factorplot()` (categorical variables are sometimes referred to as \"factors\"). This plot can be used to plot the same violin plot as before, but also sets up a grid of subplots where values of different variables can be spread across the rows and columns. For example, the unique values for the variable `sex` can each be plotted in a separate columns using the `col` parameter ."
    ]
   },
   {
@@ -881,7 +881,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sorting by the sex of the animal is probably not the most clever approach here since, the same sex from different species might very well have different weights. Let's try faceting the `genus` variable on separate rows."
+    "Sorting by the sex of the animal is probably not the most clever approach here since, the same sex from different genera and species might very well have different weights. Let's try faceting the `genus` variable on separate rows."
    ]
   },
   {
@@ -1021,7 +1021,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That looks pretty good! The plot can be made more appealing by having two columns per row and making each plot a bit wider."
+    "That looks pretty good! The plot can be made more appealing by having two columns per row (`col_wrap=2`) and making each plot a bit wider (`aspect=1.4`)."
    ]
   },
   {
