Remove one challenge

--- a/code/3-data-wrangling-and-viz.ipynb
+++ b/code/3-data-wrangling-and-viz.ipynb
@@ -1135,7 +1135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This clearly delivers the message and is easy to understand. One thing to notice here though is that the `plot_type` variable doesn't look like it has much effect on the weights. \n",
+    "This clearly delivers the message and is easy to understand. One thing to notice here is that the `plot_type` variable no longer appears to have much effect on the weights. \n",
     "\n",
     ">#### Challenge\n",
     ">\n",
@@ -1641,19 +1641,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">#### Challenge\n",
-    ">\n",
-    ">Can you think of another command that would give the same information as `surveys.groupby('taxa').size()`?\n",
-    "\n",
-    "<!-- `surveys['taxa'].value_counts() \n",
-    "The `value_counts()` option can only be done on `Series` data, so if you wanted to group by more than one variable, the `groupby` method is more versatile.\n",
-    "-->\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "There are definitely mostly rodents in our data set..."
    ]
   },
@@ -1683,7 +1670,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "...and it turns out that only rodents have had their hindfeet measured!\n",
+    "...and it turns out that only rodents have had their hindfeet measured! One possible explanation is that many of the other animals escaped before having their hindfeet measured, or that the study released all non-rodent animals because they were not part of the study goals.\n",
     "\n",
     "Let's remove all animals that did not have their hindfeet or weight measured, including those rodents that did not."
    ]
