Clarify around legend variable name `g`

--- a/code/3-data-wrangling-and-viz.ipynb
+++ b/code/3-data-wrangling-and-viz.ipynb
@@ -1745,7 +1745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The legend can be made more manageable, by manually specifying the number of columns and the fontsize to use."
+    "The legend can be made more manageable, by manually specifying the number of columns and the fontsize to use. To do this, the legend has to be controlled explicitly."
    ]
   },
   {
@@ -1775,7 +1775,7 @@
     }
    ],
    "source": [
-    "# g is the grid object returned from lmplot()\n",
+    "# g is chosed as the variable name for the grid object returned from lmplot()\n",
     "g = sns.lmplot(x='weight', y='hindfoot_length', hue='genus',\n",
     "               data=surveys_hf_wt, fit_reg=False,\n",
     "               scatter_kws={'s': 12, 'alpha':0.4}, legend=False)\n",
