Move marker challenge to lec 4

--- a/code/3-data-wrangling-and-viz.ipynb
+++ b/code/3-data-wrangling-and-viz.ipynb
@@ -1904,8 +1904,7 @@
     "This plot clearly shows where different species within the same genus differs in their weight and hindfeet length.\n",
     "\n",
     "> #### Challenge\n",
-    "> 1. In the plot we just made, change the marker type for the data points from a circle to another matplotlib [marker of your choice from this list](https://matplotlib.org/api/markers_api.html). Read the `lmplot()` docstring to find out which parameter to use to change the marker.\n",
-    "> 2. (Bonus) Explore the impact of sexual dimorphism on the weight and hindfeet length within each species. Which variables did you chose for the faceting and coloring and why?\n",
+    "> 1. (Bonus) Explore the impact of sexual dimorphism on the weight and hindfeet length within each species. Which variables did you chose for the faceting and coloring and why?\n",
     "\n",
     "<!--\n",
     "1. ?sns.lmplot()\n",
@@ -1923,7 +1922,7 @@
    "source": [
     "# Using any plotting function with `seaborn` grids\n",
     "\n",
-    "A major strength of the `seaborn` library is that it enables exploration of categorical variables through faceting, where the variables of interest are separated into the rows and columns of the plot grid as seen with `factorplot()` and `lmplot()`. These grids are very flexible and can be used with any plotting function, not just those that exist within `seaborn`.\n",
+    "A major strength of the `seaborn` library is that it enables exploration of categorical variables through faceting, where the variables of interest are separated into the rows and columns of the plot grid as seen with `factorplot()` and `lmplot()`. These grids become aware of structure in the data frame by specifying the `data` parameter. They are very flexible since they can be used with any plotting function, not just those that exist within `seaborn`.\n",
     "\n",
     "The `seaborn` function `FacetGrid()` is the foundation for both `factorplot()` and `lmplot()`, and can be used directly with a custom plotting function. To understand how it works, one of the scatter plots made with `lmplot()` can be recreated using the `FacetGrid()` syntax. The first step is to set up the grid."
    ]
@@ -2416,7 +2415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
